# CUDACPP-MNIST

./: CMakeLists.txt  README.md
src/: cnn.cu  cnn.h  main.cu  mnist.cpp  mnist.h  utils.cpp  utils.h
